--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,24 @@
                 android:cursorVisible="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:id="@+id/et3"
+                    android:layout_width="130px"
+                    android:layout_height="wrap_content" />
+
+                <Button
+                    android:id="@+id/button_save"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="上传"/>
+            </LinearLayout>
         </LinearLayout>
+
     </ScrollView>
 </RelativeLayout>
     </android.support.constraint.ConstraintLayout>
